[gd_scene load_steps=45 format=4 uid="uid://ca0n1a8j4iv6r"]

[ext_resource type="Script" path="res://assets/player.gd" id="1_f3x37"]
[ext_resource type="TileSet" uid="uid://daccygrgwd1s7" path="res://assets/map.tres" id="1_rxha7"]
[ext_resource type="TileSet" uid="uid://dq07epi820mvj" path="res://assets/effect_map.tres" id="2_rc358"]
[ext_resource type="Texture2D" uid="uid://bvty64ak3q2re" path="res://assets/mapPack_tilesheet.png" id="3_jcw2h"]
[ext_resource type="Script" path="res://assets/item.gd" id="3_pghyn"]
[ext_resource type="SpriteFrames" uid="uid://fletknv4uhml" path="res://assets/player_ninja.tres" id="6_w6cm1"]
[ext_resource type="Shader" path="res://assets/player_effect.gdshader" id="7_acjq3"]
[ext_resource type="Texture2D" uid="uid://dphi8s6gsjx71" path="res://assets/SpriteSheet.png" id="7_hklxe"]
[ext_resource type="Script" path="res://assets/player_animation.gd" id="8_bxaoy"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://c0orrb1eawtjy" path="res://assets/player_tree.tres" id="8_xgqjq"]
[ext_resource type="Shader" path="res://assets/monochrome.gdshader" id="11_lg8nt"]
[ext_resource type="Shader" path="res://assets/pixelize.gdshader" id="11_loklc"]
[ext_resource type="Script" path="res://assets/effects.gd" id="11_u27ba"]
[ext_resource type="Script" path="res://assets/ui.gd" id="12_oihe7"]
[ext_resource type="Shader" path="res://assets/chromatic_abber.gdshader" id="14_orvyr"]
[ext_resource type="Shader" path="res://assets/blur.gdshader" id="15_t0eds"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j0o4a"]
shader = ExtResource("7_acjq3")
shader_parameter/flash_color = Color(1, 1, 0, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_raksu"]
size = Vector2(30, 40)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ekhr"]
shader = ExtResource("7_acjq3")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q21wc"]
size = Vector2(38, 12.3398)

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_686x2"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_vlt4t"]
nodes/PlayerTree/node = ExtResource("8_xgqjq")
nodes/PlayerTree/position = Vector2(440, 160)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_686x2")
nodes/TimeScale/position = Vector2(680, 140)
nodes/output/position = Vector2(880, 160)
node_connections = [&"TimeScale", 0, &"PlayerTree", &"output", 0, &"TimeScale"]

[sub_resource type="Animation" id="Animation_r54au"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_74080"]
resource_name = "attack_back"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(1, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_attack"
}]
}

[sub_resource type="Animation" id="Animation_2xhrm"]
resource_name = "attack_front"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(0, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_attack"
}]
}

[sub_resource type="Animation" id="Animation_e14xb"]
resource_name = "attack_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(2, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_attack"
}]
}

[sub_resource type="Animation" id="Animation_1f248"]
resource_name = "attack_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(3, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_attack"
}]
}

[sub_resource type="Animation" id="Animation_m8xd2"]
resource_name = "idle_back"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_33fue"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_g7dt5"]
resource_name = "idle_left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_23dut"]
resource_name = "idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_da1uk"]
resource_name = "walk_back"
length = 0.4
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_3osha"]
resource_name = "walk_front"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_weya0"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_e4478"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6k5n"]
_data = {
"RESET": SubResource("Animation_r54au"),
"attack_back": SubResource("Animation_74080"),
"attack_front": SubResource("Animation_2xhrm"),
"attack_left": SubResource("Animation_e14xb"),
"attack_right": SubResource("Animation_1f248"),
"idle_back": SubResource("Animation_m8xd2"),
"idle_front": SubResource("Animation_33fue"),
"idle_left": SubResource("Animation_g7dt5"),
"idle_right": SubResource("Animation_23dut"),
"walk_back": SubResource("Animation_da1uk"),
"walk_front": SubResource("Animation_3osha"),
"walk_left": SubResource("Animation_weya0"),
"walk_right": SubResource("Animation_e4478")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2r5xr"]
shader = ExtResource("11_lg8nt")
shader_parameter/darkness = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_oswyy"]
atlas = ExtResource("3_jcw2h")
region = Rect2(970.894, 580.655, 38.9147, 54.2397)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4leg"]
bg_color = Color(0.960784, 0.223529, 0.835294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xugnl"]
bg_color = Color(0.960784, 0.223529, 0.835294, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yg74o"]
shader = ExtResource("11_loklc")
shader_parameter/size_x = 0.008
shader_parameter/size_y = 0.008

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ppfg1"]
shader = ExtResource("14_orvyr")
shader_parameter/offset = 50.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bdsue"]
shader = ExtResource("15_t0eds")
shader_parameter/strength = 3.3
shader_parameter/mix_percentage = 4.75e-08
shader_parameter/color_sample = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2sto"]
bg_color = Color(0.960637, 0.223771, 0.835876, 1)

[node name="Node2D" type="Node2D"]

[node name="Tilemap" type="Node2D" parent="."]

[node name="ground" type="TileMapLayer" parent="Tilemap" groups=["tilemap"]]
modulate = Color(1, 0.705882, 0.611765, 1)
tile_map_data = PackedByteArray("AAABAAEAAgAFAAAAAAABAAIAAgAFAAEAAAABAAMAAgAFAAEAAAABAAQAAgAFAAIAAAACAAEAAgAGAAAAAAACAAIAAgAGAAEAAAACAAMAAgAGAAEAAAACAAQAAgAGAAIAAAADAAEAAgAGAAAAAAADAAIAAgAGAAEAAAADAAMAAgAGAAEAAAADAAQAAgAGAAIAAAAEAAEAAgAGAAAAAAAEAAIAAgAGAAEAAAAEAAMAAgAGAAEAAAAEAAQAAgAGAAIAAAAFAAEAAgAGAAAAAAAFAAIAAgAGAAEAAAAFAAMAAgAGAAEAAAAFAAQAAgAGAAIAAAAGAAEAAgAGAAAAAAAGAAIAAgAGAAEAAAAGAAMAAgAGAAEAAAAGAAQAAgAGAAIAAAAHAAEAAgAGAAAAAAAHAAIAAgAGAAEAAAAHAAMAAgAGAAEAAAAHAAQAAgAGAAIAAAAIAAEAAgAHAAAAAAAIAAIAAgAIAAEAAAAIAAMAAgAIAAAAAAAIAAQAAgAHAAMAAAAJAAEAAgAAAAAAAAAJAAIAAgAEAAEAAAAJAAMAAgAEAAAAAAAJAAQAAgAAAAMAAAAKAAEAAgABAAAAAAAKAAIAAgABAAEAAAAKAAMAAgABAAEAAAAKAAQAAgABAAIAAAALAAEAAgABAAAAAAALAAIAAgABAAEAAAALAAMAAgABAAEAAAALAAQAAgABAAMAAAAMAAEAAgACAAAAAAAMAAIAAgADAAEAAAAMAAMAAgADAAAAAAAMAAQAAgACAAMAAAANAAEAAgAAAAQAAAANAAIAAgAEAAUAAAANAAMAAgAEAAQAAAANAAQAAgAAAAcAAAAOAAEAAgABAAQAAAAOAAIAAgABAAUAAAAOAAMAAgABAAUAAAAOAAQAAgAEAAQAAAAPAAEAAgABAAQAAAAPAAIAAgABAAUAAAAPAAMAAgABAAUAAAAPAAQAAgADAAQAAAAQAAEAAgACAAQAAAAQAAIAAgACAAUAAAAQAAMAAgACAAUAAAAQAAQAAgACAAYAAAAPAAUAAgANAAEAAAAOAAUAAgAOAAEAAAANAAUAAgAKAAAAAAAQAAUAAgAMAAAAAAAOAAYAAgALAAEAAAAOAAcAAgALAAEAAAAPAAcAAgALAAEAAAAPAAYAAgALAAEAAAAOAAgAAgALAAIAAAAPAAgAAgALAAMAAAAQAAgAAgAMAAMAAAANAAgAAgAKAAMAAAAQAAYAAgAMAAEAAAAQAAcAAgAMAAEAAAANAAYAAgAOAAEAAAANAAcAAgAOAAAAAAAMAAcAAgAIAAAAAAAMAAYAAgAIAAEAAAALAAUAAgAGAAAAAAAMAAUAAgAHAAAAAAAMAAgAAgAHAAMAAAAKAAUAAgAGAAAAAAAJAAUAAgAGAAAAAAAIAAUAAgAGAAAAAAAHAAUAAgAGAAAAAAAHAAYAAgAGAAEAAAAGAAYAAgAGAAEAAAAFAAYAAgAGAAEAAAAGAAUAAgAGAAAAAAAFAAUAAgAGAAAAAAAEAAUAAgAGAAAAAAADAAUAAgAGAAAAAAACAAUAAgAGAAAAAAABAAUAAgAFAAAAAAABAAYAAgAFAAEAAAABAAcAAgAFAAEAAAABAAgAAgAFAAIAAAACAAgAAgAGAAMAAAADAAgAAgAGAAMAAAAEAAgAAgAGAAMAAAAFAAgAAgAGAAIAAAAGAAgAAgAGAAIAAAAHAAgAAgAGAAMAAAAIAAgAAgAGAAIAAAAJAAgAAgAGAAMAAAAKAAgAAgAGAAIAAAALAAgAAgAGAAMAAAACAAYAAgAGAAEAAAADAAYAAgAGAAEAAAAEAAYAAgAGAAEAAAAIAAYAAgAGAAEAAAAJAAYAAgAGAAEAAAAJAAcAAgAGAAEAAAAKAAcAAgAGAAEAAAALAAcAAgAGAAEAAAALAAYAAgAGAAEAAAAKAAYAAgAGAAEAAAAIAAcAAgAGAAEAAAAHAAcAAgAGAAEAAAAGAAcAAgAGAAEAAAAFAAcAAgAGAAEAAAAEAAcAAgAGAAEAAAADAAcAAgAGAAEAAAACAAcAAgAGAAEAAAA=")
tile_set = ExtResource("1_rxha7")

[node name="effect" type="TileMapLayer" parent="Tilemap" groups=["tilemap"]]
modulate = Color(0.968627, 0.27451, 0.466667, 1)
tile_map_data = PackedByteArray("AAAJAAoAAAABAAAAAAAIAAoAAAABAAAAAAAHAAoAAAABAAAAAAAGAAoAAAABAAAAAAAFAAoAAAABAAAAAAAEAAoAAAAAAAgAAAAEAAkAAAAAAAgAAAAJAAkAAAABAAEAAAAFAAcAAAAAAAkAAAAGAAcAAAAAAAkAAAAHAAcAAAAAAAkAAAAIAAcAAAAAAAkAAAAJAAcAAAABAAEAAAAJAAgAAAABAAEAAAAEAAgAAAAAAAgAAAAEAAcAAAAAAAkAAAA=")
tile_set = ExtResource("2_rc358")

[node name="Sprite2D_anim" type="AnimatedSprite2D" parent="Tilemap"]
visible = false
texture_filter = 1
position = Vector2(-91.1992, 229.623)
scale = Vector2(4, 4)
sprite_frames = ExtResource("6_w6cm1")
animation = &"attack_back"

[node name="item" type="CharacterBody2D" parent="."]
position = Vector2(477.122, 180.482)
script = ExtResource("3_pghyn")

[node name="sprite_item" type="Sprite2D" parent="item"]
material = SubResource("ShaderMaterial_j0o4a")
texture = ExtResource("3_jcw2h")
region_enabled = true
region_rect = Rect2(528.972, 460.35, 31.7738, 40.2614)

[node name="CollisionShape2D" type="CollisionShape2D" parent="item"]
shape = SubResource("RectangleShape2D_raksu")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(298, 145)
script = ExtResource("1_f3x37")

[node name="sprite_player" type="Sprite2D" parent="player"]
texture_filter = 1
material = SubResource("ShaderMaterial_7ekhr")
position = Vector2(0, -32)
scale = Vector2(4, 4)
texture = ExtResource("7_hklxe")
hframes = 4
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
visible = false
position = Vector2(-2, -6.16988)
shape = SubResource("RectangleShape2D_q21wc")

[node name="AnimationTree" type="AnimationTree" parent="player"]
active = false
callback_mode_process = 0
tree_root = SubResource("AnimationNodeBlendTree_vlt4t")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/PlayerTree/Attack/blend_position = Vector2(-0.222576, -0.725664)
parameters/PlayerTree/Idle/blend_position = Vector2(1, 0)
parameters/PlayerTree/Walk/blend_position = Vector2(1, 0)
parameters/TimeScale/scale = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_q6k5n")
}

[node name="PlayerAnimation" type="Node2D" parent="player" node_paths=PackedStringArray("anim_tree")]
script = ExtResource("8_bxaoy")
anim_tree = NodePath("../AnimationTree")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(298, 145)
zoom = Vector2(1.5, 1.5)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="effects" type="Control" parent="Camera2D/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("11_u27ba")

[node name="monochrome" type="ColorRect" parent="Camera2D/CanvasLayer/effects"]
material = SubResource("ShaderMaterial_2r5xr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VSlider" type="VSlider" parent="Camera2D/CanvasLayer/effects/monochrome"]
offset_left = 66.0
offset_top = 62.0
offset_right = 82.0
offset_bottom = 238.0
focus_mode = 0
theme_override_icons/grabber = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_disabled = SubResource("AtlasTexture_oswyy")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_m4leg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_xugnl")
min_value = 1.0
max_value = 10.0
value = 3.0

[node name="pixelized" type="ColorRect" parent="Camera2D/CanvasLayer/effects"]
visible = false
material = SubResource("ShaderMaterial_yg74o")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VSlider" type="VSlider" parent="Camera2D/CanvasLayer/effects/pixelized"]
layout_mode = 0
offset_left = 66.0
offset_top = 62.0
offset_right = 82.0
offset_bottom = 238.0
focus_mode = 0
theme_override_icons/grabber = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_disabled = SubResource("AtlasTexture_oswyy")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_m4leg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_xugnl")
min_value = 0.001
max_value = 0.1
step = 0.001
value = 0.008

[node name="chromatic_abber" type="ColorRect" parent="Camera2D/CanvasLayer/effects"]
visible = false
material = SubResource("ShaderMaterial_ppfg1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VSlider" type="VSlider" parent="Camera2D/CanvasLayer/effects/chromatic_abber"]
offset_left = 66.0
offset_top = 62.0
offset_right = 82.0
offset_bottom = 238.0
focus_mode = 0
theme_override_icons/grabber = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_disabled = SubResource("AtlasTexture_oswyy")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_m4leg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_xugnl")
value = 50.0

[node name="blur" type="ColorRect" parent="Camera2D/CanvasLayer/effects"]
visible = false
material = SubResource("ShaderMaterial_bdsue")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VSlider" type="VSlider" parent="Camera2D/CanvasLayer/effects/blur"]
visible = false
offset_left = 66.0
offset_top = 62.0
offset_right = 82.0
offset_bottom = 238.0
focus_mode = 0
theme_override_icons/grabber = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_disabled = SubResource("AtlasTexture_oswyy")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_m4leg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_xugnl")
min_value = 0.1
max_value = 20.0
step = 0.1
value = 3.3

[node name="VSlider2" type="VSlider" parent="Camera2D/CanvasLayer/effects/blur"]
visible = false
offset_left = 123.0
offset_top = 62.0
offset_right = 161.0
offset_bottom = 238.0
focus_mode = 0
theme_override_icons/grabber = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_oswyy")
theme_override_icons/grabber_disabled = SubResource("AtlasTexture_oswyy")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_m4leg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_xugnl")
min_value = -1.0
max_value = 1.0
step = 0.1
value = 0.3

[node name="ui" type="Control" parent="Camera2D/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("12_oihe7")

[node name="OptionButton" type="OptionButton" parent="Camera2D/CanvasLayer/ui"]
layout_mode = 0
offset_left = 23.0
offset_top = 14.0
offset_right = 119.0
offset_bottom = 34.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_n2sto")

[connection signal="value_changed" from="Camera2D/CanvasLayer/effects/monochrome/VSlider" to="Camera2D/CanvasLayer/effects" method="_on_v2_slider_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/effects/pixelized/VSlider" to="Camera2D/CanvasLayer/effects" method="_on_v_slider_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/effects/chromatic_abber/VSlider" to="Camera2D/CanvasLayer/effects" method="_on_v3_slider_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/effects/blur/VSlider" to="Camera2D/CanvasLayer/effects" method="_on_v4_slider_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/effects/blur/VSlider2" to="Camera2D/CanvasLayer/effects" method="_on_v5_slider_2_value_changed"]
[connection signal="item_selected" from="Camera2D/CanvasLayer/ui/OptionButton" to="Camera2D/CanvasLayer/ui" method="_on_option_button_item_selected"]
